Fix some icon may still incorrect, #48
* Fix close tab icon incorrect with Dark Fox theme on Fx40 only
** protected icon is invisible when not hover on Fx39 and earlier
* Linux should use the same image with Windows instead of Mac
* Cleanup some CSS, drop some icon compatibility for older versions

--- a/chrome/skin/tabutils.css
+++ b/chrome/skin/tabutils.css
@@ -81,13 +81,14 @@ menuseparator:last-child {
 
 .tabbrowser-tab[locked] .tab-throbber:not([busy]),
 .tabbrowser-tab[protected] .tab-close-button {
-  list-style-image: url(resource:///chrome/browser/skin/classic/browser/Secure.png);
-  -moz-image-region: rect(1px, 15px, 15px, 1px);
+  list-style-image: url("chrome://tabutils/skin/Secure24.png") !important;
+  -moz-image-region: auto !important;
 }
 
+/* Tab Highlighting */
 .tabbrowser-tab[autoReload]:not(:hover) .tab-close-button {
-  list-style-image: url("resource:///chrome/browser/skin/classic/browser/classic/browser/Toolbar-small.png") !important;
-  -moz-image-region: rect(1px, 111px, 15px, 97px) !important;
+  list-style-image: url("chrome://tabutils/skin/autoreload.png") !important;
+  -moz-image-region: auto !important;
 }
 
 /* Pinned Tab */
