--- a/chrome/skin/tabutils_linux.css
+++ b/chrome/skin/tabutils_linux.css
@@ -1,28 +1,3 @@
-/* Tab Highlighting */
-window[OS="Linux"] .tabbrowser-tab[locked] .tab-throbber:not([busy]),
-window[OS="Linux"] .tabbrowser-tab[protected] .tab-close-button {
-  list-style-image: url("resource:///chrome/browser/skin/classic/browser/Secure.png");
-  -moz-image-region: auto;
-}
-window[OS="Linux"][v41="true"] .tabbrowser-tab[locked] .tab-throbber:not([busy]),
-window[OS="Linux"][v41="true"] .tabbrowser-tab[protected] .tab-close-button {
-  list-style-image: url("chrome://tabutils/skin/Secure-Glyph.png") !important;
-}
-
-window[OS="Linux"] .tabbrowser-tab[autoReload]:not(:hover) .tab-close-button {
-  list-style-image: url("resource:///chrome/browser/skin/classic/browser/Toolbar-small.png") !important;
-  -moz-image-region: rect(0px, 32px, 16px, 16px) !important;
-}
-window[OS="Linux"][v40="true"] .tabbrowser-tab[autoReload]:not(:hover) .tab-close-button {
-  list-style-image: url("chrome://tabutils/skin/autoreload.png") !important;
-  -moz-image-region: auto !important;
-}
-
-window[OS="Linux"][v29="true"] .tabbrowser-tab[autoReload]:not(:hover) .tab-close-button {
-  list-style-image: url("resource:///chrome/browser/skin/classic/browser/Toolbar.png") !important;
-  -moz-image-region: rect(1px, 179px, 17px, 163px) !important;
-}
-
 /* Toolbar buttons */
 window[OS="Linux"] #closetab-button {
   list-style-image: url("moz-icon://stock/gtk-close?size=toolbar");
